[feat] Interface for managing project activity

--- a/core/components/com_projects/admin/language/en-GB/en-GB.com_projects.ini
+++ b/core/components/com_projects/admin/language/en-GB/en-GB.com_projects.ini
@@ -191,6 +191,7 @@ COM_PROJECTS_IMAGE_ORIGINAL="Original"
 COM_PROJECTS_IMAGE_WIDTH="Width"
 COM_PROJECTS_IMAGE_HEIGHT="Height"
 COM_PROJECTS_IMAGE_SIZE="Size"
+COM_PROJECTS_IMAGE_NONE="This project does not have an image."
 COM_PROJECTS_OR="or"
 COM_PROJECTS_AND_OR="and/or"
 COM_PROJECTS_AS="as"
@@ -252,3 +253,39 @@ COM_PROJECTS_TEAM_OWNERS_ROLE_CHANGED="Team member role successfully changed."
 COM_PROJECTS_TEAM_DELETE="Are you sure you want to remove these members?"
 COM_PROJECTS_TEAM_OWNERS_DELETED="Selected project team member(s) deleted."
 COM_PROJECTS_TEAM_OWNERS_DELETE_NOMANAGERS="Project needs at least one manager. Could not delete all selected users."
+
+; Activity
+COM_PROJECTS_FILTER_SEARCH_DESC="Keyword or phrase..."
+COM_PROJECTS_FILTER_ACTION="- Action -"
+COM_PROJECTS_FILTER_FILTER="- Filter -"
+COM_PROJECTS_FILTER_STARRED="Starred"
+COM_PROJECTS_ACTIVITY="Activity"
+COM_PROJECTS_ACTIVITY_ID="ID"
+COM_PROJECTS_ACTIVITY_CREATED="Created"
+COM_PROJECTS_ACTIVITY_CREATED_BY="Creator"
+COM_PROJECTS_ACTIVITY_ACTION="Action"
+COM_PROJECTS_ACTIVITY_DESCRIPTION="Description"
+COM_PROJECTS_ACTIVITY_STARRED="Starred"
+COM_PROJECTS_ACTIVITY_PROJECT="Project"
+COM_PROJECTS_FIELD_ANONYMOUS="Anonymous"
+COM_PROJECTS_FIELD_ANONYMOUS_HINT="When marked anonymous a commenter's name and picture are hidden. No specific identifying information should be accessible by other users."
+COM_PROJECTS_FIELD_DESCRIPTION="Comments"
+COM_PROJECTS_FIELD_STATE="State"
+COM_PROJECTS_FIELD_ACTION="Action"
+COM_PROJECTS_FIELD_CREATED="Created"
+COM_PROJECTS_FIELD_CREATOR="Creator"
+COM_PROJECTS_FIELD_ID="ID"
+COM_PROJECTS_FIELD_STARRED="Starred"
+COM_PROJECTS_FIELD_STATE="State"
+COM_PROJECTS_ALL_STATES="- State -"
+COM_PROJECTS_N_NOMINATIONS="%s nominations"
+COM_PROJECTS_ACTIVITY_NOMINATIONS="Nominations"
+COM_PROJECTS_ACTIVITY_STATE="State"
+COM_PROJECTS_ITEMS_PUBLISHED="%s Item(s) successfully published"
+COM_PROJECTS_ITEMS_UNPUBLISHED="%s Item(s) successfully unpublished"
+COM_PROJECTS_ITEMS_STAR="%s Item(s) starred"
+COM_PROJECTS_ITEMS_UNSTAR="%s Item(s) unstarred"
+COM_PROJECTS_ITEMS_DELETED="%s Item(s) successfully deleted"
+COM_PROJECTS_ITEM_SAVED="Item successfully saved"
+COM_PROJECTS_ACTIVITY_TITLE="View activity for this project"
+
