[feat] Updated README and added link files

--- a/app/plugins/projects/publications/language/en-GB/en-GB.plg_projects_publications.ini
+++ b/app/plugins/projects/publications/language/en-GB/en-GB.plg_projects_publications.ini
@@ -997,6 +997,7 @@ PLG_PROJECTS_PUBLICATIONS_PUBLICATION_VERSION_NOT_FOUND="Error: failed to load r
 PLG_PROJECTS_PUBLICATIONS_PUBLICATION_VERSION_NOT_CREATED="Error: failed to create new version of resource"
 PLG_PROJECTS_PUBLICATIONS_PUBLICATION_NOT_ALLOWED="Error: missing information required for submission of new version"
 PLG_PROJECTS_PUBLICATIONS_PUBLICATION_UNABLE_TO_CREATE_PATH="Error: unable to create directory for resource files"
+PLG_PROJECTS_PUBLICATIONS_PUBLICATION_UNABLE_TO_DELETE_PATH="Error: unable to delete directory for resource files"
 PLG_PROJECTS_PUBLICATIONS_PUBLICATION_ERROR_CANNOT_SAVE_PRIMARY="Cannot update primary content of a posted version. Please start a new version."
 PLG_PROJECTS_PUBLICATIONS_PUBLICATION_VERSION_NOT_DEV="Error: this version has already been submitted."
 PLG_PROJECTS_PUBLICATIONS_PUBLICATION_FAILED="Failed to post version."
