[plg_projects_publications] Squashed commit of the following...
commit 08b2469bc60ca7454fc97dd76a96db8bc7b3dd30
Author: M. Drew LaMar <mdlama@wm.edu>
Date:   Mon Aug 6 11:35:29 2018 -0400

    [fix] Stricter input casting for project plugins

    (cherry picked from commit e8b3277c2579002ca0585e84e2d17288490ae6b6)

commit 8bbf4808762c0e2bc3737c4c1939256a78710b30
Author: M. Drew LaMar <mdlama@wm.edu>
Date:   Mon Aug 6 11:34:28 2018 -0400

    [feature] add sym links to publication bundle.

    (cherry picked from commit 8da3c407babd8ec0f2ffa46f6ca04e226e47a45d)

commit b686ff6508d59f982af8d85cac4507bbf3394f7a
Author: M. Drew LaMar <mdlama@wm.edu>
Date:   Mon Aug 6 11:33:04 2018 -0400

    [fix] Ensure correct and sequential ordering values

    Fixes: https://purr.purdue.edu/support/ticket/1795
    (cherry picked from commit 73f134a98c50960f4cbe7c51250ad00ae064f763)

...

--- a/app/plugins/projects/publications/language/en-GB/en-GB.plg_projects_publications.ini
+++ b/app/plugins/projects/publications/language/en-GB/en-GB.plg_projects_publications.ini
@@ -32,7 +32,7 @@ PLG_PROJECTS_PUBLICATIONS_CURATION_REVIEW_DATE="Submission settings"
 PLG_PROJECTS_PUBLICATIONS_CURATION_TITLE_AGREE="Agreements"
 PLG_PROJECTS_PUBLICATIONS_CURATION_TITLE_COMMENT="Comments"
 PLG_PROJECTS_PUBLICATIONS_CURATION_TITLE_REVIEW="Request Review"
-PLG_PROJECTS_PUBLICATIONS_CURATION_DESC_COMMENT="Leave any additional comments to an administrator about your resource draft:"
+PLG_PROJECTS_PUBLICATIONS_CURATION_DESC_COMMENT="Leave any additional comments to an administrator about your publication draft:"
 PLG_PROJECTS_PUBLICATIONS_CURATION_LOOKING_GOOD="All looking good?"
 PLG_PROJECTS_PUBLICATIONS_SUBMIT_DRAFT="Submit draft"
 PLG_PROJECTS_PUBLICATIONS_CURATION_REVIEW_TITLE_DOI="Digital Object Identifier (DOI)"
@@ -655,6 +655,8 @@ PLG_PROJECTS_PUBLICATIONS_PUB_TYPE_TOOLS="Tool"
 PLG_PROJECTS_PUBLICATIONS_PUB_TYPE_NOTES="Notes"
 PLG_PROJECTS_PUBLICATIONS_PRIMARY_CONTENT_USED_DUPLICATE_NOT_ALLOWED="Resources with duplicate content aren't allowed."
 PLG_PROJECTS_PUBLICATIONS_VIEW_PUB_PAGE="View resource page &raquo;"
+PLG_PROJECTS_PUBLICATIONS_MOVEUP="Move up"
+PLG_PROJECTS_PUBLICATIONS_MOVEDOWN="Move down"
 
 ; Citations
 PLG_PROJECTS_PUBLICATIONS_PUBLICATION_CITATIONS="Citations"
@@ -963,8 +965,8 @@ COM_PUBLICATIONS_LICENSED_THIS_DEED="this deed"
 PLG_PROJECTS_PUBLICATIONS_PUB_REVIEW_WHAT_TO_EXPECT="Important notices:"
 PLG_PROJECTS_PUBLICATIONS_PUBLICATION_ACCESS_IS="Content access is"
 PLG_PROJECTS_PUBLICATIONS_PUB_REVIEW_NOT_NOW="Not now"
-PLG_PROJECTS_PUBLICATIONS_PUB_REVIEW_AGREE_TO="I and all resource authors have read and agree to"
-PLG_PROJECTS_PUBLICATIONS_PUB_REVIEW_REVIEW="I would like for this resource to be reviewed instead of automatically being posted."
+PLG_PROJECTS_PUBLICATIONS_PUB_REVIEW_AGREE_TO="I and all publication authors have read and agree to"
+PLG_PROJECTS_PUBLICATIONS_PUB_REVIEW_REVIEW="I would like for this publication to be reviewed instead of automatically being published."
 PLG_PROJECTS_PUBLICATIONS_PUB_REVIEW_TERMS_OF_DEPOSIT="Terms of Deposit"
 PLG_PROJECTS_PUBLICATIONS_PUBLICATION_REVIEW_AGREE_TERMS_REQUIRED="Please check the box to confirm you agree to the Terms of Deposit."
 
