[feat] Adding connection path prefixing UI

--- a/core/plugins/projects/files/language/en-GB/en-GB.plg_projects_files.ini
+++ b/core/plugins/projects/files/language/en-GB/en-GB.plg_projects_files.ini
@@ -414,3 +414,8 @@ PLG_PROJECTS_FILES_SYNC_STRUCTURE_REMOTE="Getting remote directory structure"
 PLG_PROJECTS_FILES_SYNC_SUCCESS="Successfully synced"
 PLG_PROJECTS_FILES_CONNECT_SUCCESS="Successfully connected"
 PLG_PROJECTS_FILES_DISCONNECT_SUCCESS="You got disconnected from"
+
+PLG_PROJECTS_FILES_CONNECTED_PREFIX_NOT_SET="Select a prefix"
+PLG_PROJECTS_FILES_CONNECTED_SELECT_PREFIX="A specific directory has not been selected to share with this connection.  Please select one below."
+PLG_PROJECTS_FILES_CONNECTED_SELECT="Select"
+PLG_PROJECTS_FILES_CONNECTED_CURRENT_DIRECTORY="%s (current directory)"
