--- a/core/plugins/projects/files/language/en-GB/en-GB.plg_projects_files.ini
+++ b/core/plugins/projects/files/language/en-GB/en-GB.plg_projects_files.ini
@@ -419,3 +419,4 @@ PLG_PROJECTS_FILES_CONNECTED_PREFIX_NOT_SET="Select a prefix"
 PLG_PROJECTS_FILES_CONNECTED_SELECT_PREFIX="A specific directory has not been selected to share with this connection.  Please select one below."
 PLG_PROJECTS_FILES_CONNECTED_SELECT="Select"
 PLG_PROJECTS_FILES_CONNECTED_CURRENT_DIRECTORY="%s (current directory)"
+PLG_PROJECTS_FILES_CONNECTED_PREFIX_SELECT_SUCCESS="Prefix set successfully"
