[PURR][#1862]DataCite MDS API application on PURR/Hubzero

--- a/core/plugins/projects/publications/language/en-GB/en-GB.plg_projects_publications.ini
+++ b/core/plugins/projects/publications/language/en-GB/en-GB.plg_projects_publications.ini
@@ -1015,6 +1015,8 @@ COM_PUBLICATIONS_ERROR_DOI_NO_SERVICE="The DOI service is either unavailable or 
 PLG_PROJECTS_PUBLICATIONS_PROJECT_MANAGER="Project manager"
 PLG_PROJECTS_PUBLICATIONS_PROJECT_MEMBER="Project member"
 PLG_PROJECTS_PUBLICATIONS_DRAFT_READY_TO_SUBMIT="OK to submit"
+PLG_PROJECTS_PUBLICATIONS_ERROR_REGISTER_METADATA="Error registering the DOI metadata and issuing DOI."
+PLG_PROJECTS_PUBLICATIONS_ERROR_REGISTER_NAME_URL="Error registering the DOI name and dataset URL."
 
 ; Misc
 PLG_PROJECTS_PUBLICATIONS_REQUIRED="required"
