--- a/core/plugins/projects/publications/language/en-GB/en-GB.plg_projects_publications.ini
+++ b/core/plugins/projects/publications/language/en-GB/en-GB.plg_projects_publications.ini
@@ -1017,6 +1017,7 @@ PLG_PROJECTS_PUBLICATIONS_PROJECT_MEMBER="Project member"
 PLG_PROJECTS_PUBLICATIONS_DRAFT_READY_TO_SUBMIT="OK to submit"
 PLG_PROJECTS_PUBLICATIONS_ERROR_REGISTER_METADATA="Error registering the DOI metadata and issuing DOI."
 PLG_PROJECTS_PUBLICATIONS_ERROR_REGISTER_NAME_URL="Error registering the DOI name and dataset URL."
+PLG_PROJECTS_PUBLICATIONS_ERROR_NO_DOI_SERVICE="No DOI service is selected and please contact site administrator."
 
 ; Misc
 PLG_PROJECTS_PUBLICATIONS_REQUIRED="required"
