[fix] Adding missing language string

--- a/core/components/com_citations/site/language/en-GB/en-GB.com_citations.ini
+++ b/core/components/com_citations/site/language/en-GB/en-GB.com_citations.ini
@@ -179,6 +179,7 @@ COM_CITATIONS_MANUALLY_FORMAT_FORMAT="Format Type"
 COM_CITATIONS_MANUALLY_FORMAT_APA="APA"
 COM_CITATIONS_MANUALLY_FORMAT_IEEE="IEEE"
 COM_CITATIONS_MANUALLY_FORMAT_CITATION="Citation"
+COM_CITATIONS_NO_CITATION_FORMAT="No citation format provided."
 
 ; Tasks
 COM_CITATIONS_ADD="Add"
